# PackageQuery

./: .gitignore  CMakeLists.txt  config.txt  main.cpp  main_lattice_solver.cpp  main_mc_matrix.cpp  main_simplex.cpp  old_main_lattice_solver.cpp  package_query.code-workspace  requirements.txt  test_accuracy_lattice_walk.cpp  test_speed_lattice_walk.cpp  test_speed_simplex.cpp
cmake/: FindCplex.cmake  FindGUROBI.cmake
cmake_tutorial/: package_query.code-workspace
include/: config.h  coo_sparse.h  dual.h  dual_reducer.h  fast_cv.h  gurobi_lattice_solver.h  gurobi_solver.h  lattice_solver.h  map_sort.h  matplotlibcpp.h  parallel_pq.h  pseudo_walker.h  reducer.h  simplex.h  utility.h
include/deprecated/: abstract_walker.h  config.h  coo_sparse.h  cplex_lattice_solver.h  cplex_solver.cpp  dual.h  dual_reducer.cpp  dual_reducer.h  fast_cv.h  lsr.cpp  parallel_pq.h  pseudo_walker.h  utility.h  walker.h
include/pb/core/: checker.cpp  checker.h  cplex_solver.h  dist.cpp  dist.h  dual.cpp  dual.h  dual_reducer.cpp  dual_reducer.h  gurobi_solver.cpp  gurobi_solver.h  map_sort.h  parallel_pq.cpp  parallel_pq.h  pseudo_walker.cpp  pseudo_walker.h  vg.h
include/pb/det/: det_bound.cpp  det_bound.h  det_exp.cpp  det_exp.h  det_prob.cpp  det_prob.h  det_sql.cpp  det_sql.h  dlv.cpp  dlv.h  dlv_partition.cpp  dlv_partition.h  dual_reducer.cpp  dual_reducer2.cpp  kd_tree.cpp  kd_tree.h  lsr.cpp  lsr.h  lsr_prob.cpp  lsr_prob.h  partialpackage.cpp  partialpackage.h  sr.cpp  sr.h  synthetic.cpp  synthetic.h
include/pb/lib/: brent.cpp  brent.hpp  common.cpp  common.h  log_normal.cpp  log_normal.hpp  log_normal_truncated_ab.cpp  log_normal_truncated_ab.hpp  map_sort.h  normal.cpp  normal.hpp  praxis.cpp  praxis.hpp  random_quantile.h  toms178.cpp  toms178.hpp  truncated_normal.cpp  truncated_normal.hpp
include/pb/sto/: sto_prob.h
include/pb/tmp/: lp_lsr.cpp  lp_lsr.h  random_dual_reducer.cpp  random_dual_reducer.h  random_lsr.cpp  random_lsr.h  test_dual_reducer.cpp  test_dual_reducer.h
include/pb/tmp/deprecated/: lp_lsr.cpp
include/pb/util/: uconfig.cpp  uconfig.h  udebug.cpp  udebug.h  udeclare.h  uiostream.cpp  uiostream.h  umisc.cpp  umisc.h  unumeric.cpp  unumeric.h  upostgres.cpp  upostgres.h  ustats.cpp  ustats.h
plots/: Experiment_igap.ipynb  KD_partition_graph.ipynb  dual.ipynb  dual_reducer_hardness.ipynb  grid.ipynb  hardness.ipynb  test.ipynb  z1.ipynb
plots/.ipynb_checkpoints/: dual-checkpoint.ipynb
resource/: convert.sh  portfolio.ipynb  ssds.ipynb  ssds.py  tpch.ipynb  tpch.py
resource/backup/: dlv.cpp  dlv1.cpp  dual.cpp  dual2.cpp  dual_reducer.h  dual_reducer2.h  main_pqxx.cpp  main_pqxx2.cpp  main_reader.cpp  pseudo_walker.cpp  reducer.cpp  test.cpp
runnable/: main_ccfits.cpp  main_config.cpp  main_dlv.cpp  main_dual.cpp  main_dual_reducer.cpp  main_lattice_solver.cpp  main_postgres.cpp  main_pqxx.cpp  main_quick_select.cpp  main_reader.cpp  main_reducer.cpp  main_simplex.cpp  main_sketchrefine.cpp  main_ssds_subtable.cpp  main_subtable.cpp  test_accuracy_lattice_walk.cpp  test_all.cpp  test_det_bound.cpp  test_dlv.cpp  test_dual.cpp  test_dual_reducer.cpp  test_final.cpp  test_gurobi_solver.cpp  test_new.cpp  test_plot.cpp  test_ppq.cpp  test_speed_lattice_walk.cpp  test_sr.cpp
runnable/deprecated/: main_dual_reducer.cpp  main_postgres.cpp  test_all.cpp  test_cplex_solver.cpp  test_dual.cpp  test_dual_reducer.cpp  test_lattice_solver.cpp  test_plot.cpp  test_speed_simplex.cpp
src/: coo_sparse.cpp  cplex_lattice_solver.cpp  dual.cpp  dual_reducer.cpp  fast_cv.cpp  gurobi_lattice_solver.cpp  gurobi_solver.cpp  lattice_solver.cpp  parallel_pq.cpp  pseudo_walker.cpp  reducer.cpp  simplex.cpp  utility.cpp  walker.cpp
src/deprecated/: fast_cv.cpp  gurobi_lattice_solver.cpp  gurobi_solver.cpp  lattice_solver.cpp  pseudo_walker.cpp  reducer.cpp  utility.cpp
